<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bulls Eye</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bulls_eye_lbl1">Put the Bulls Eye as close as you can to :</string>
    <string name="one_hundred_place_holder">100</string>
    <string name="one">1</string>
    <string name="hundred">100</string>
    <string name="hit_me">Hit Me</string>
    <string name="score">Score</string>
    <string name="placeholder">9999</string>
    <string name="round">Round</string>
    <string name="info">Info</string>
    <string name="start_over">Start Over</string>

</resources>